# mcp-dynatrace-logs

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-19-mcp-dynatrace-logs.md  2026-03-26-mcp-improvements.md
docs/superpowers/specs/: 2026-03-19-mcp-dynatrace-logs-design.md  2026-03-26-mcp-improvements-design.md
src/mcp_dynatrace_logs/: client.py  server.py  tools.py
tests/: test_client.py  test_server.py  test_tools.py
